--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "version": "0.1.0",
   "license": "MIT",
   "repository": "github:thewilkybarkid/datacite-ts",
+  "peerDependencies": {
+    "doi-ts": "^0.1.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^18.11.10",
+    "doi-ts": "^0.1.4",
+    "expect-type": "^0.15.0",
     "husky": "^8.0.2",
     "prettier": "^2.8.0",
-    "prettier-plugin-sh": "^0.12.8"
+    "prettier-plugin-sh": "^0.12.8",
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "format": "prettier --ignore-unknown --check '**'",
     "format:fix": "npm run format -- --write",
-    "prepare": "which husky && husky install || true"
+    "prepare": "which husky && husky install || true",
+    "typecheck": "tsc --noEmit"
   }
 }
