--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A DataCite API client for use with fp-ts.",
   "version": "0.1.0",
   "license": "MIT",
+  "homepage": "https://github.com/thewilkybarkid/datacite-ts",
   "repository": "github:thewilkybarkid/datacite-ts",
   "peerDependencies": {
     "doi-ts": "^0.1.2"
@@ -13,6 +14,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^18.11.10",
+    "docs-ts": "^0.7.0",
     "doi-ts": "^0.1.4",
     "expect-type": "^0.15.0",
     "husky": "^8.0.2",
@@ -21,6 +23,7 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
+    "docs": "docs-ts",
     "format": "prettier --ignore-unknown --check '**'",
     "format:fix": "npm run format -- --write",
     "prepare": "which husky && husky install || true",
