--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "homepage": "https://github.com/thewilkybarkid/datacite-ts",
   "repository": "github:thewilkybarkid/datacite-ts",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "sideEffects": false,
   "peerDependencies": {
     "doi-ts": "^0.1.2"
   },
@@ -14,6 +18,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^18.11.10",
+    "del-cli": "^5.0.0",
     "docs-ts": "^0.7.0",
     "doi-ts": "^0.1.4",
     "expect-type": "^0.15.0",
@@ -23,6 +28,8 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
+    "prebuild": "del dist",
+    "build": "tsc --project tsconfig.build.json",
     "docs": "docs-ts",
     "format": "prettier --ignore-unknown --check '**'",
     "format:fix": "npm run format -- --write",
