feat: add a Work codec
Adds a codec for the Work type, converting it to and from a JSON string.

This change also sets up a test suite using Jest (https://jestjs.io/).

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,14 @@
     "plugin:import/typescript",
     "prettier"
   ],
+  "overrides": [
+    {
+      "files": ["**/*.test.ts"],
+      "rules": {
+        "@typescript-eslint/no-unsafe-argument": "off"
+      }
+    }
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   }
