--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "dependencies": {
+    "safe-stable-stringify": "^2.4.1"
+  },
   "peerDependencies": {
-    "doi-ts": "^0.1.2"
+    "doi-ts": "^0.1.2",
+    "fp-ts": "^2.11.0",
+    "io-ts": "^2.2.15"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@fast-check/jest": "^1.4.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^18.11.10",
@@ -28,9 +34,13 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "expect-type": "^0.15.0",
+    "fp-ts": "^2.13.1",
     "husky": "^8.0.2",
+    "io-ts": "^2.2.19",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "prettier-plugin-sh": "^0.12.8",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
   "scripts": {
@@ -41,6 +51,7 @@
     "format:fix": "npm run format -- --write",
     "lint": "eslint .",
     "prepare": "which husky && husky install || true",
+    "test": "jest",
     "typecheck": "tsc --noEmit"
   }
 }
