--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-fetch": "^2.6.7",
     "prettier": "^2.8.0",
     "prettier-plugin-sh": "^0.12.8",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
@@ -56,6 +57,7 @@
     "format:fix": "npm run format -- --write",
     "lint": "eslint .",
     "prepare": "which husky && husky install || true",
+    "release": "standard-version --sign",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   }
