--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
     "http-status-codes": "^2.2.0",
     "safe-stable-stringify": "^2.4.1"
   },
