--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "safe-stable-stringify": "^2.4.1"
   },
   "peerDependencies": {
-    "@js-temporal/polyfill": "^0.4.3",
+    "@js-temporal/polyfill": "^0.4.3 || ^0.5.0",
     "doi-ts": "^0.1.2",
     "fetch-fp-ts": "^0.1.3",
     "fp-ts": "^2.11.0",
@@ -24,7 +24,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@fast-check/jest": "^1.4.0",
-    "@js-temporal/polyfill": "^0.4.3",
+    "@js-temporal/polyfill": "^0.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^18.11.10",
